--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <title>Landing Page</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
+  
   <body>
+    <main>
     <h1>Landing Page</h1>
     <p>Landing page realizada como parte de mi formación en desarrollo frontend.</p>
+    </main>
   </body>
+  
 </html>
